--- a/genindex.html
+++ b/genindex.html
@@ -326,8 +326,6 @@
 </li>
         <li><a href="engine/internal/action.html#scripts.engine.internal.action.Behaviour.__init__">(Behaviour method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.action.Behaviour.__init__">[1]</a>
 </li>
-        <li><a href="engine/internal/component.html#scripts.engine.internal.component.Blocking.__init__">(Blocking method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Blocking.__init__">[1]</a>
-</li>
         <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.__init__">(Camera method)</a>
 </li>
         <li><a href="nqp/elements/character_selector.html#scripts.nqp.ui_elements.character_selector.CharacterSelector.__init__">(CharacterSelector method)</a>, <a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.character_selector.CharacterSelector.__init__">[1]</a>
@@ -393,6 +391,8 @@
         <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.MoveActorEffectData.__init__">(MoveActorEffectData method)</a>
 </li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.Opinion.__init__">(Opinion method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Opinion.__init__">[1]</a>
+</li>
+        <li><a href="engine/internal/component.html#scripts.engine.internal.component.Physicality.__init__">(Physicality method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Physicality.__init__">[1]</a>
 </li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.Position.__init__">(Position method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Position.__init__">[1]</a>
 </li>
@@ -721,14 +721,10 @@
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.TargetTag.BLOCKED_MOVEMENT">BLOCKED_MOVEMENT (TargetTag attribute)</a>
 </li>
-      <li><a href="engine/internal/component.html#scripts.engine.internal.component.Blocking">Blocking (class in scripts.engine.internal.component)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Blocking">[1]</a>
-</li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TerrainData.blocks_movement">blocks_movement (TerrainData attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TerrainData.blocks_sight">blocks_sight (TerrainData attribute)</a>
-</li>
       <li><a href="nqp/actions/affliction.html#scripts.nqp.actions.affliction.BoggedDown">BoggedDown (class in scripts.nqp.actions.affliction)</a>, <a href="scripts.nqp.actions.html#scripts.nqp.actions.affliction.BoggedDown">[1]</a>
 </li>
       <li><a href="engine/core/dungen.html#scripts.engine.core.dungen.DungeonGenerator.bools_map">bools_map() (DungeonGenerator property)</a>, <a href="scripts.engine.core.html#scripts.engine.core.dungen.DungeonGenerator.bools_map">[1]</a>
@@ -1004,8 +1000,6 @@
       <ul>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.Afflictions.deserialize">(Afflictions class method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Afflictions.deserialize">[1]</a>
 </li>
-        <li><a href="engine/internal/component.html#scripts.engine.internal.component.Blocking.deserialize">(Blocking class method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Blocking.deserialize">[1]</a>
-</li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.Exists.deserialize">(Exists class method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Exists.deserialize">[1]</a>
 </li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.FOV.deserialize">(FOV class method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.FOV.deserialize">[1]</a>
@@ -1029,6 +1023,8 @@
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.LightSource.deserialize">(LightSource class method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.LightSource.deserialize">[1]</a>
 </li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.Opinion.deserialize">(Opinion class method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Opinion.deserialize">[1]</a>
+</li>
+        <li><a href="engine/internal/component.html#scripts.engine.internal.component.Physicality.deserialize">(Physicality class method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Physicality.deserialize">[1]</a>
 </li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.Position.deserialize">(Position class method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Position.deserialize">[1]</a>
 </li>
@@ -1062,6 +1058,8 @@
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.InteractionTrigger.DIE">DIE (InteractionTrigger attribute)</a>
 </li>
       <li><a href="engine/internal/definition.html#scripts.engine.internal.definition.Dimensions">Dimensions (class in scripts.engine.internal.definition)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.definition.Dimensions">[1]</a>
+</li>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.Height.DIMINUTIVE">DIMINUTIVE (Height attribute)</a>
 </li>
       <li><a href="engine/internal/constant.html#scripts.engine.internal.constant.Direction">Direction (class in scripts.engine.internal.constant)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.constant.Direction">[1]</a>
 </li>
@@ -1161,12 +1159,10 @@
         <li><a href="scripts.engine.core.html#scripts.engine.core.dungen.RoomConcept.end_y">(RoomConcept property)</a>
 </li>
       </ul></li>
-      <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.DefaultValueData.entity_blocks_sight">entity_blocks_sight (DefaultValueData attribute)</a>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.UIElement.ENTITY_QUEUE">ENTITY_QUEUE (UIElement attribute)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.UIElement.ENTITY_QUEUE">ENTITY_QUEUE (UIElement attribute)</a>
-</li>
       <li><a href="engine/internal/effect.html#scripts.engine.internal.effect.AffectCooldownEffect.evaluate">evaluate() (AffectCooldownEffect method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.effect.AffectCooldownEffect.evaluate">[1]</a>
 
       <ul>
@@ -1403,16 +1399,22 @@
         <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.SecondaryStat.HEALTH">(SecondaryStat attribute)</a>
 </li>
       </ul></li>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.ActorData.height">height (ActorData attribute)</a>
+</li>
+      <li><a href="engine/internal/constant.html#scripts.engine.internal.constant.Height">Height (class in scripts.engine.internal.constant)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.constant.Height">[1]</a>
+</li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.Dimensions.height">height (Dimensions attribute)</a>
 
       <ul>
         <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.MapData.height">(MapData attribute)</a>
 </li>
-      </ul></li>
-      <li><a href="engine/core/dungen.html#scripts.engine.core.dungen.RoomConcept.height">height() (RoomConcept property)</a>, <a href="scripts.engine.core.html#scripts.engine.core.dungen.RoomConcept.height">[1]</a>
+        <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TerrainData.height">(TerrainData attribute)</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="engine/core/dungen.html#scripts.engine.core.dungen.RoomConcept.height">height() (RoomConcept property)</a>, <a href="scripts.engine.core.html#scripts.engine.core.dungen.RoomConcept.height">[1]</a>
+</li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.HitType.HIT">HIT (HitType attribute)</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.HitTypeData.hit">hit (HitTypeData attribute)</a>
@@ -1615,6 +1617,8 @@
       </ul></li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.GameState.LOADING">LOADING (GameState attribute)</a>
 </li>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.Height.LOFTY">LOFTY (Height attribute)</a>
+</li>
       <li><a href="engine/internal/data.html#scripts.engine.internal.data.Store.log_message">log_message() (Store method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.data.Store.log_message">[1]</a>
 </li>
       <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.Lunge">Lunge (class in scripts.nqp.actions.skill)</a>, <a href="scripts.nqp.actions.html#scripts.nqp.actions.skill.Lunge">[1]</a>
@@ -1632,6 +1636,8 @@
       <li><a href="scripts.engine.core.html#scripts.engine.core.dungen.DungeonGenerator.map_of_categories">map_of_categories (DungeonGenerator attribute)</a>
 </li>
       <li><a href="engine/internal/definition.html#scripts.engine.internal.definition.MapData">MapData (class in scripts.engine.internal.definition)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.definition.MapData">[1]</a>
+</li>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.Height.MAX">MAX (Height attribute)</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.RoomConceptData.max_actors">max_actors (RoomConceptData attribute)</a>
 </li>
@@ -1670,6 +1676,10 @@
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.UIElement.MESSAGE_LOG">MESSAGE_LOG (UIElement attribute)</a>
 </li>
       <li><a href="nqp/elements/message_log.html#scripts.nqp.ui_elements.message_log.MessageLog">MessageLog (class in scripts.nqp.ui_elements.message_log)</a>, <a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.message_log.MessageLog">[1]</a>
+</li>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.Height.MIDDLING">MIDDLING (Height attribute)</a>
+</li>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.Height.MIN">MIN (Height attribute)</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.RoomConceptData.min_actors">min_actors (RoomConceptData attribute)</a>
 </li>
@@ -1926,6 +1936,8 @@
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TraitData.permanent_afflictions">permanent_afflictions (TraitData attribute)</a>
 </li>
+      <li><a href="engine/internal/component.html#scripts.engine.internal.component.Physicality">Physicality (class in scripts.engine.internal.component)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Physicality">[1]</a>
+</li>
       <li><a href="scripts.engine.core.html#scripts.engine.core.dungen.DungeonGenerator.placed_rooms">placed_rooms (DungeonGenerator attribute)</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.TileCategory.PLAYER">PLAYER (TileCategory attribute)</a>
@@ -1966,6 +1978,8 @@
       </ul></li>
       <li><a href="nqp/processors/display.html#scripts.nqp.processors.display.process_display_updates">process_display_updates() (in module scripts.nqp.processors.display)</a>, <a href="scripts.nqp.processors.html#scripts.nqp.processors.display.process_display_updates">[1]</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.camera.Camera.process_event">process_event() (Camera method)</a>
 
       <ul>
@@ -1986,8 +2000,6 @@
         <li><a href="engine/widgets/window.html#scripts.engine.widgets.window.Window.process_event">(Window method)</a>, <a href="scripts.engine.widgets.html#scripts.engine.widgets.window.Window.process_event">[1]</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="engine/core/system.html#scripts.engine.core.system.process_fov">process_fov() (in module scripts.engine.core.system)</a>, <a href="scripts.engine.core.html#scripts.engine.core.system.process_fov">[1]</a>
 </li>
       <li><a href="nqp/processors/intent.html#scripts.nqp.processors.intent.process_intent">process_intent() (in module scripts.nqp.processors.intent)</a>, <a href="scripts.nqp.processors.html#scripts.nqp.processors.intent.process_intent">[1]</a>
@@ -2584,8 +2596,6 @@
       <ul>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.Afflictions.serialize">(Afflictions method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Afflictions.serialize">[1]</a>
 </li>
-        <li><a href="engine/internal/component.html#scripts.engine.internal.component.Blocking.serialize">(Blocking method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Blocking.serialize">[1]</a>
-</li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.Exists.serialize">(Exists method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Exists.serialize">[1]</a>
 </li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.FOV.serialize">(FOV method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.FOV.serialize">[1]</a>
@@ -2609,6 +2619,8 @@
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.LightSource.serialize">(LightSource method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.LightSource.serialize">[1]</a>
 </li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.Opinion.serialize">(Opinion method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Opinion.serialize">[1]</a>
+</li>
+        <li><a href="engine/internal/component.html#scripts.engine.internal.component.Physicality.serialize">(Physicality method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Physicality.serialize">[1]</a>
 </li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.Position.serialize">(Position method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Position.serialize">[1]</a>
 </li>
