--- a/_modules/scripts/engine/internal/constant.html
+++ b/_modules/scripts/engine/internal/constant.html
@@ -265,9 +265,8 @@
 
 <span class="c1">######################## TOP LEVEL CONSTANTS ######################################</span>
 
-<span class="n">VERSION</span> <span class="o">=</span> <span class="s2">"0.136.0"</span>  <span class="c1"># DONT FORGET TO UPDATE SPHINX VERSION</span>
+<span class="n">VERSION</span> <span class="o">=</span> <span class="s2">"0.137.0"</span>  <span class="c1"># DONT FORGET TO UPDATE SPHINX VERSION</span>
 <span class="n">DEBUG_START</span> <span class="o">=</span> <span class="kc">False</span>  <span class="c1"># Whether to start directly in debug map</span>
-
 
 <span class="n">MAX_SKILLS</span> <span class="o">=</span> <span class="mi">6</span>
 <span class="n">MAX_SAVES</span> <span class="o">=</span> <span class="mi">1</span>
@@ -321,6 +320,7 @@
 <span class="n">InteractionTriggerType</span> <span class="o">=</span> <span class="n">NewType</span><span class="p">(</span><span class="s2">"InteractionTriggerType"</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
 <span class="n">RenderLayerType</span> <span class="o">=</span> <span class="n">NewType</span><span class="p">(</span><span class="s2">"RenderLayerType"</span><span class="p">,</span> <span class="nb">int</span><span class="p">)</span>
 <span class="n">TileCategoryType</span> <span class="o">=</span> <span class="n">NewType</span><span class="p">(</span><span class="s2">"TileCategoryType"</span><span class="p">,</span> <span class="nb">str</span><span class="p">)</span>
+<span class="n">HeightType</span> <span class="o">=</span> <span class="n">NewType</span><span class="p">(</span><span class="s2">"HeightType"</span><span class="p">,</span> <span class="nb">int</span><span class="p">)</span>
 
 <span class="n">TagType</span> <span class="o">=</span> <span class="n">Union</span><span class="p">[</span><span class="n">TargetTagType</span><span class="p">,</span> <span class="n">DamageTypeType</span><span class="p">,</span> <span class="n">AfflictionCategoryType</span><span class="p">]</span>
 
@@ -653,7 +653,7 @@
 
 <div class="viewcode-block" id="TileCategory"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.constant.TileCategory">[docs]</a><span class="k">class</span> <span class="nc">TileCategory</span><span class="p">(</span><span class="n">SimpleNamespace</span><span class="p">):</span>
     <span class="sd">"""</span>
-<span class="sd">    The type of tile to be placed. Used in Dungen</span>
+<span class="sd">    The type of tile to be placed. Used in Dungen only.</span>
 <span class="sd">    """</span>
 
     <span class="n">FLOOR</span> <span class="o">=</span> <span class="n">TileCategoryType</span><span class="p">(</span><span class="s2">"floor"</span><span class="p">)</span>
@@ -661,6 +661,18 @@
     <span class="n">ACTOR</span> <span class="o">=</span> <span class="n">TileCategoryType</span><span class="p">(</span><span class="s2">"actor"</span><span class="p">)</span>
     <span class="n">DEBUG</span> <span class="o">=</span> <span class="n">TileCategoryType</span><span class="p">(</span><span class="s2">"debug"</span><span class="p">)</span>
     <span class="n">PLAYER</span> <span class="o">=</span> <span class="n">TileCategoryType</span><span class="p">(</span><span class="s2">"player"</span><span class="p">)</span></div>
+
+
+<div class="viewcode-block" id="Height"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.constant.Height">[docs]</a><span class="k">class</span> <span class="nc">Height</span><span class="p">(</span><span class="n">SimpleNamespace</span><span class="p">):</span>
+    <span class="sd">"""</span>
+<span class="sd">    How tall an entity is.</span>
+<span class="sd">    """</span>
+
+    <span class="n">MIN</span> <span class="o">=</span> <span class="n">HeightType</span><span class="p">(</span><span class="mi">1</span><span class="p">)</span>
+    <span class="n">DIMINUTIVE</span> <span class="o">=</span> <span class="n">HeightType</span><span class="p">(</span><span class="mi">2</span><span class="p">)</span>
+    <span class="n">MIDDLING</span> <span class="o">=</span> <span class="n">HeightType</span><span class="p">(</span><span class="mi">3</span><span class="p">)</span>
+    <span class="n">LOFTY</span> <span class="o">=</span> <span class="n">HeightType</span><span class="p">(</span><span class="mi">4</span><span class="p">)</span>
+    <span class="n">MAX</span> <span class="o">=</span> <span class="n">HeightType</span><span class="p">(</span><span class="mi">5</span><span class="p">)</span></div>
 </pre></div>
 
           </article>
