--- a/_modules/scripts/engine/internal/definition.html
+++ b/_modules/scripts/engine/internal/definition.html
@@ -268,6 +268,8 @@
     <span class="n">DirectionType</span><span class="p">,</span>
     <span class="n">EffectType</span><span class="p">,</span>
     <span class="n">EffectTypeType</span><span class="p">,</span>
+    <span class="n">Height</span><span class="p">,</span>
+    <span class="n">HeightType</span><span class="p">,</span>
     <span class="n">InteractionTriggerType</span><span class="p">,</span>
     <span class="n">PrimaryStat</span><span class="p">,</span>
     <span class="n">PrimaryStatType</span><span class="p">,</span>
@@ -368,7 +370,13 @@
     <span class="n">description</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">"none"</span>
     <span class="n">position_offsets</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">Tuple</span><span class="p">[</span><span class="nb">int</span><span class="p">,</span> <span class="nb">int</span><span class="p">]]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">list</span><span class="p">)</span>
     <span class="n">trait_names</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="nb">str</span><span class="p">]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">list</span><span class="p">)</span>
-    <span class="n">behaviour_name</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">"none"</span></div>
+    <span class="n">behaviour_name</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">"none"</span>
+    <span class="n">height</span><span class="p">:</span> <span class="n">HeightType</span> <span class="o">=</span> <span class="n">Height</span><span class="o">.</span><span class="n">MIN</span>
+
+    <span class="k">def</span> <span class="nf">__post_init__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="c1"># map external str to internal int</span>
+        <span class="k">if</span> <span class="nb">isinstance</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">height</span><span class="p">,</span> <span class="nb">str</span><span class="p">):</span>
+            <span class="bp">self</span><span class="o">.</span><span class="n">height</span> <span class="o">=</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">Height</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">height</span><span class="o">.</span><span class="n">upper</span><span class="p">())</span></div>
 
 
 <div class="viewcode-block" id="TraitData"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.definition.TraitData">[docs]</a><span class="nd">@register_dataclass_with_json</span>
@@ -467,7 +475,7 @@
     <span class="n">sprite_paths</span><span class="p">:</span> <span class="n">TraitSpritePathsData</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="n">TraitSpritePathsData</span><span class="p">)</span>
 
     <span class="c1"># how does it travel?</span>
-    <span class="n">speed</span><span class="p">:</span> <span class="n">ProjectileSpeedType</span> <span class="o">=</span> <span class="n">ProjectileSpeed</span><span class="o">.</span><span class="n">SLOW</span>
+    <span class="n">speed</span><span class="p">:</span> <span class="n">ProjectileSpeedType</span> <span class="o">=</span> <span class="n">ProjectileSpeed</span><span class="o">.</span><span class="n">SLOW</span>  <span class="c1"># takes str from json and is converted in post_init</span>
     <span class="n">travel_method</span><span class="p">:</span> <span class="n">TravelMethodType</span> <span class="o">=</span> <span class="n">TravelMethod</span><span class="o">.</span><span class="n">STANDARD</span>
     <span class="nb">range</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">1</span>
 
@@ -476,6 +484,7 @@
     <span class="n">expiry_type</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">ProjectileExpiryType</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
 
     <span class="k">def</span> <span class="nf">__post_init__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="c1"># map external str to internal int</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">speed</span> <span class="o">=</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">ProjectileSpeed</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">speed</span><span class="o">.</span><span class="n">upper</span><span class="p">())</span></div>
 
 
@@ -489,12 +498,16 @@
 
     <span class="n">name</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">"none"</span>
     <span class="n">description</span><span class="p">:</span> <span class="nb">str</span> <span class="o">=</span> <span class="s2">"none"</span>
-    <span class="n">blocks_sight</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span>
+    <span class="n">height</span><span class="p">:</span> <span class="n">HeightType</span> <span class="o">=</span> <span class="n">Height</span><span class="o">.</span><span class="n">MIN</span>
     <span class="n">blocks_movement</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span>
     <span class="n">position_offsets</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">Tuple</span><span class="p">[</span><span class="nb">int</span><span class="p">,</span> <span class="nb">int</span><span class="p">]]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">list</span><span class="p">)</span>
     <span class="n">sprite_paths</span><span class="p">:</span> <span class="n">TraitSpritePathsData</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="n">TraitSpritePathsData</span><span class="p">)</span>
     <span class="n">reactions</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="n">InteractionTriggerType</span><span class="p">,</span> <span class="n">EffectData</span><span class="p">]</span> <span class="o">=</span> <span class="n">field</span><span class="p">(</span><span class="n">default_factory</span><span class="o">=</span><span class="nb">dict</span><span class="p">)</span>
-    <span class="n">light</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">LightData</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span></div>
+    <span class="n">light</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">LightData</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
+
+    <span class="k">def</span> <span class="nf">__post_init__</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
+        <span class="c1"># map external str to internal int</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">height</span> <span class="o">=</span> <span class="nb">getattr</span><span class="p">(</span><span class="n">Height</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">height</span><span class="o">.</span><span class="n">upper</span><span class="p">())</span></div>
 
 
 <span class="c1">################### GODS ###################################################</span>
@@ -816,7 +829,6 @@
 <span class="nd">@dataclass</span>
 <span class="k">class</span> <span class="nc">DefaultValueData</span><span class="p">:</span>
     <span class="n">time_per_round</span><span class="p">:</span> <span class="nb">int</span>
-    <span class="n">entity_blocks_sight</span><span class="p">:</span> <span class="nb">bool</span>
     <span class="n">reduced_effectiveness_multi_tile_modifier</span><span class="p">:</span> <span class="nb">float</span></div>
 
 
