--- a/_modules/scripts/engine/internal/effect.html
+++ b/_modules/scripts/engine/internal/effect.html
@@ -267,11 +267,11 @@
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.component</span> <span class="kn">import</span> <span class="p">(</span>
     <span class="n">Aesthetic</span><span class="p">,</span>
     <span class="n">Afflictions</span><span class="p">,</span>
-    <span class="n">Blocking</span><span class="p">,</span>
     <span class="n">HasCombatStats</span><span class="p">,</span>
     <span class="n">Identity</span><span class="p">,</span>
     <span class="n">Knowledge</span><span class="p">,</span>
     <span class="n">Lifespan</span><span class="p">,</span>
+    <span class="n">Physicality</span><span class="p">,</span>
     <span class="n">Position</span><span class="p">,</span>
     <span class="n">Resources</span><span class="p">,</span>
 <span class="p">)</span>
@@ -496,16 +496,16 @@
             <span class="k">if</span> <span class="n">is_tile_blocking_movement</span><span class="p">:</span>
                 <span class="kn">from</span> <span class="nn">scripts.engine.core</span> <span class="kn">import</span> <span class="n">query</span>
 
-                <span class="k">for</span> <span class="n">blocking_entity</span><span class="p">,</span> <span class="p">(</span><span class="n">pos</span><span class="p">,</span> <span class="n">blocking</span><span class="p">)</span> <span class="ow">in</span> <span class="n">query</span><span class="o">.</span><span class="n">position_and_blocking</span><span class="p">:</span>
+                <span class="k">for</span> <span class="n">other_entity</span><span class="p">,</span> <span class="p">(</span><span class="n">pos</span><span class="p">,</span> <span class="n">physicality</span><span class="p">)</span> <span class="ow">in</span> <span class="n">query</span><span class="o">.</span><span class="n">position_and_physicality</span><span class="p">:</span>
                     <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">pos</span><span class="p">,</span> <span class="n">Position</span><span class="p">)</span>
-                    <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">blocking</span><span class="p">,</span> <span class="n">Blocking</span><span class="p">)</span>
+                    <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">physicality</span><span class="p">,</span> <span class="n">Physicality</span><span class="p">)</span>
                     <span class="k">if</span> <span class="p">(</span>
-                        <span class="n">blocking_entity</span> <span class="o">!=</span> <span class="n">entity</span>
-                        <span class="ow">and</span> <span class="n">blocking</span><span class="o">.</span><span class="n">blocks_movement</span>
+                        <span class="n">other_entity</span> <span class="o">!=</span> <span class="n">entity</span>
+                        <span class="ow">and</span> <span class="n">physicality</span><span class="o">.</span><span class="n">blocks_movement</span>
                         <span class="ow">and</span> <span class="p">(</span><span class="n">target_x</span><span class="p">,</span> <span class="n">target_y</span><span class="p">)</span> <span class="ow">in</span> <span class="n">pos</span><span class="o">.</span><span class="n">coordinates</span>
                     <span class="p">):</span>
                         <span class="c1"># blocked by entity</span>
-                        <span class="n">blockers_name</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="n">blocking_entity</span><span class="p">)</span>
+                        <span class="n">blockers_name</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="n">other_entity</span><span class="p">)</span>
                         <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span>
                             <span class="sa">f</span><span class="s2">"'</span><span class="si">{</span><span class="n">name</span><span class="si">}</span><span class="s2">' tried to move in </span><span class="si">{</span><span class="n">direction_name</span><span class="si">}</span><span class="s2"> to (</span><span class="si">{</span><span class="n">target_x</span><span class="si">}</span><span class="s2">,</span><span class="si">{</span><span class="n">target_y</span><span class="si">}</span><span class="s2">) but was blocked"</span>
                             <span class="sa">f</span><span class="s2">" by '</span><span class="si">{</span><span class="n">blockers_name</span><span class="si">}</span><span class="s2">'. "</span>
