--- a/_modules/scripts/nqp/ui_elements/character_selector.html
+++ b/_modules/scripts/nqp/ui_elements/character_selector.html
@@ -266,7 +266,7 @@
 
 <span class="kn">from</span> <span class="nn">scripts.engine.core.utility</span> <span class="kn">import</span> <span class="n">build_sprites_from_paths</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal</span> <span class="kn">import</span> <span class="n">library</span>
-<span class="kn">from</span> <span class="nn">scripts.engine.internal.constant</span> <span class="kn">import</span> <span class="n">GameEvent</span><span class="p">,</span> <span class="n">GAP_SIZE</span><span class="p">,</span> <span class="n">RenderLayer</span><span class="p">,</span> <span class="n">TILE_SIZE</span><span class="p">,</span> <span class="n">TraitGroup</span>
+<span class="kn">from</span> <span class="nn">scripts.engine.internal.constant</span> <span class="kn">import</span> <span class="n">GameEvent</span><span class="p">,</span> <span class="n">GAP_SIZE</span><span class="p">,</span> <span class="n">Height</span><span class="p">,</span> <span class="n">RenderLayer</span><span class="p">,</span> <span class="n">TILE_SIZE</span><span class="p">,</span> <span class="n">TraitGroup</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.definition</span> <span class="kn">import</span> <span class="n">ActorData</span>
 <span class="kn">from</span> <span class="nn">scripts.engine.widgets.panel</span> <span class="kn">import</span> <span class="n">Panel</span>
 
@@ -512,6 +512,7 @@
             <span class="n">description</span><span class="o">=</span><span class="s2">"Player desc"</span><span class="p">,</span>
             <span class="n">position_offsets</span><span class="o">=</span><span class="p">[(</span><span class="mi">0</span><span class="p">,</span> <span class="mi">0</span><span class="p">)],</span>
             <span class="n">trait_names</span><span class="o">=</span><span class="n">traits</span><span class="p">,</span>
+            <span class="n">height</span><span class="o">=</span><span class="s2">"middling"</span><span class="p">,</span>  <span class="c1"># type: ignore  # need to pass as str to be converted during post-init</span>
         <span class="p">)</span>
 
         <span class="c1"># fire event</span>
